# pharmaceutical_industry_analysis

./: .gitignore  README.md  main.py  pyproject.toml  プロンプト用_分析計画.md
.dvc/: config
.github/: copilot-instructions.md
input/: 財務データ_製薬業界.xlsx.dvc
modules/: __init__.py  io.py  metrics.py  preprocess.py  report.py  viz.py
output/: 01_summary.md  02_summary.md  03_summary.md  04_summary.md
src/: 01_positioning.py  02_profitability_decompose.py  03_capital_efficiency.py  04_clustering.py
